do some progress

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,8 +1,8 @@
-<h1>Spring Boot Angular Pagination Example App</h1>
-<nav>
-  <ul>
-    <li><a routerLink="/todos1" routerLinkActive="active">DataTable Pagination Example</a></li>
-    <li><a routerLink="/todos2" routerLinkActive="active">Normal Table Example</a></li>
-  </ul>
-</nav>
-<router-outlet></router-outlet>
+
+<app-header></app-header>
+
+<div class="container top-padding">
+        <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
