--- a/ui/src/app/components/header/header.component.html
+++ b/ui/src/app/components/header/header.component.html
@@ -1,5 +1,7 @@
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-	<a class="navbar-brand" href="#">News Finder</a>
+	<a class="navbar-brand"  routerLink="/">Новините от деня</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 	  <span class="navbar-toggler-icon"></span>
 	</button>
@@ -7,12 +9,17 @@
 	<div class="collapse navbar-collapse" id="navbarColor01">
 	  <ul class="navbar-nav mr-auto">
 		<li class="nav-item">
-		  <a class="nav-link" href="#">Вход</a>
+		  <a class="nav-link" routerLink="../login">Вход</a>
 		</li>
 	  </ul>
-	  <form class="form-inline my-2 my-lg-0">
-		<input class="form-control mr-sm-2" type="text" placeholder="Търси новина">
-		<button class="btn btn-secondary my-2 my-sm-0" type="submit">Търсене</button>
+	  <form class="form-inline my-2 my-lg-0" (ngSubmit)="search()">
+		<input class="form-control mr-sm-2" type="text" [value]="phrase" (input)="phrase = $event.target.value" placeholder="Търси новина">
+		<button class="btn btn-secondary my-2 my-sm-0" type="submit" (click)="search()">Търсене</button>
 	  </form>
 	</div>
-  </nav>
+	</nav>
+
+
+
+
+	
