--- a/ui/src/app/components/show-news/show-news.component.html
+++ b/ui/src/app/components/show-news/show-news.component.html
@@ -1,4 +1,4 @@
-<div id="newsContainer" class="jumbotron ">
+<div id="newsContainer" class="jumbotron " style="background-color: white">
 
         <div class="list-group" *ngFor="let news of feedNews" style="    background-color: #333; margin-bottom:3px;">
                 <a href="{{news.link}}" class="list-group-item list-group-item-action flex-column align-items-start" >
